# maplibre-native-jvm-demo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  justfile  maplibre-cache  settings.gradle.kts
maplibre-jni/: CMakeLists.txt  CMakePresets.json  build.gradle.kts  disable-macos-tests.patch  disable-tests.patch
maplibre-jni/src/main/cpp/: awt_backend_factory.cpp  awt_backend_factory.hpp  awt_canvas_renderer.cpp  awt_canvas_renderer.hpp  awt_egl_backend.cpp  awt_egl_backend.hpp  awt_gl_backend.cpp  awt_gl_backend.hpp  awt_metal_backend.hpp  awt_metal_backend.mm  awt_opengl_backend.cpp  awt_opengl_backend.hpp  awt_vulkan_backend.cpp  awt_vulkan_backend.hpp  awt_vulkan_backend_macos.mm  awt_wgl_backend.cpp  awt_wgl_backend.hpp  backend_factory.mm  backend_factory_vulkan.mm  egl_context_strategy.cpp  egl_context_strategy.hpp  gl_context_strategy.hpp  glx_context_strategy.cpp  glx_context_strategy.hpp  jawt_utils.mm  jni_awt_backend_factory.cpp  jni_awt_backend_factory.hpp  jni_awt_canvas_renderer.cpp  jni_awt_canvas_renderer.hpp  jni_awt_gl_backend.cpp  jni_awt_metal_backend.mm  jni_awt_platform_factory.cpp  jni_cameraoptions.cpp  jni_clientoptions.cpp  jni_edgeinsets.cpp  jni_egl_backend.cpp  jni_egl_backend.hpp  jni_egl_backend_macos.mm  jni_egl_renderer_backend.cpp  jni_gl_backend.cpp  (+36 more)
maplibre-jni/src/main/cpp/conversions/: cameraoptions_conversions.cpp  clientoptions_conversions.cpp  clientoptions_conversions.hpp  edgeinsets_conversions.cpp  jni_cameraoptions_conversions.cpp  jni_cameraoptions_conversions.hpp  jni_clientoptions_conversions.cpp  jni_edgeinsets_conversions.cpp  jni_edgeinsets_conversions.hpp  jni_latlng_conversions.cpp  jni_mapoptions_conversions.cpp  jni_resourceoptions_conversions.cpp  jni_resourceoptions_conversions.hpp  jni_screencoordinate_conversions.cpp  jni_size_conversions.cpp  jni_tileserveroptions_conversions.cpp  jni_tileserveroptions_conversions.hpp  latlng_conversions.cpp  latlng_conversions.hpp  mapoptions_conversions.cpp  mapoptions_conversions.hpp  resourceoptions_conversions.cpp  screencoordinate_conversions.cpp  screencoordinate_conversions.hpp  size_conversions.cpp  size_conversions.hpp  tileserveroptions_conversions.cpp
src/main/kotlin/: DemoKeyboardHandler.kt  DemoObserver.kt  DemoStyles.kt  Main.kt  MapDebugOptionsExample.kt
src/main/kotlin/com/maplibre/jni/: AwtCanvasRenderer.kt  CameraOptions.kt  ClientOptions.kt  ConstrainMode.kt  EGLRendererBackend.kt  EdgeInsets.kt  GLContext.kt  JAWTRendererBackend.kt  JOGLContext.kt  JOGLRendererBackend.kt  JOGLRendererFrontend.kt  LatLng.kt  MapDebugOptions.kt  MapInteractionHandler.kt  MapLoadError.kt  MapMode.kt  MapObserver.kt  MapOptions.kt  MaplibreCanvas.kt  MaplibreMap.kt  NativeMapObserver.kt  NorthOrientation.kt  PlatformUtils.kt  RendererFrontend.kt  ResourceOptions.kt  RunLoop.kt  ScreenCoordinate.kt  Size.kt  TileServerOptions.kt  ViewportMode.kt  utils.kt
src/main/kotlin/org/maplibre/kmp/native/: CameraOptions.kt  CanvasRendererFrontend.kt  ClientOptions.kt  ConstrainMode.kt  EdgeInsets.kt  LatLng.kt  MapDebugOptions.kt  MapInteractionHandler.kt  MapLoadError.kt  MapMode.kt  MapObserver.kt  MapOptions.kt  MaplibreCanvas.kt  MaplibreMap.kt  NorthOrientation.kt  RendererFrontend.kt  ResourceOptions.kt  ScreenCoordinate.kt  Size.kt  TileServerOptions.kt  ViewportMode.kt  utils.kt
src/main/kotlin/org/maplibre/kmp/native/internal/: Native.kt
src/test/kotlin/com/maplibre/jni/: CameraOptionsTest.kt  ClientOptionsTest.kt  EdgeInsetsTest.kt  LatLngTest.kt  MapObserverTest.kt  MapOptionsTest.kt  ResourceOptionsTest.kt  ScreenCoordinateTest.kt  SizeTest.kt
